force-app/main/default/objects/MatchingComparisonTarget__mdt/MatchingComparisonTarget__mdt.object-meta.xml
<CustomObject>
    <label>マッチング比較対象</label>
</CustomObject>