force-app/main/default/objects/MatchingComparisonTarget__mdt/fields/FieldsName__c.field-meta.xml
<CustomField>
    <fullName>FieldsName__c</fullName>
    <label>項目名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>