force-app/main/default/objects/MatchingComparisonTarget__mdt/fields/IsBill__c.field-meta.xml
<CustomField>
    <fullName>IsBill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求書フラグ</label>
    <type>Checkbox</type>
</CustomField>