force-app/main/default/objects/MatchingComparisonTarget__mdt/fields/IsContract__c.field-meta.xml
<CustomField>
    <fullName>IsContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>契約書フラグ</label>
    <type>Checkbox</type>
</CustomField>