force-app/main/default/objects/MatchingComparisonTarget__mdt/fields/IsDrawing__c.field-meta.xml
<CustomField>
    <fullName>IsDrawing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>図面フラグ</label>
    <type>Checkbox</type>
</CustomField>