force-app/main/default/objects/MatchingComparisonTarget__mdt/fields/IsImportantExplanation__c.field-meta.xml
<CustomField>
    <fullName>IsImportantExplanation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>重説フラグ</label>
    <type>Checkbox</type>
</CustomField>