force-app/main/default/objects/MatchingComparisonTarget__mdt/fields/ReferenceName__c.field-meta.xml
<CustomField>
    <fullName>ReferenceName__c</fullName>
    <label>参照名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>