force-app/main/default/objects/MatchingComparisonTarget__mdt/fields/RowNum__c.field-meta.xml
<CustomField>
    <fullName>RowNum__c</fullName>
    <label>行番号</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>